Add posts/upload path to the route and controller

--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -3,3 +3,8 @@
   <input id="message" type="text" name="message" value="">
   <input type="submit" value="Submit">
 </form>
+
+<form id="upload-photo-form" action="/posts/upload" method="post">
+  <input type="file" name="image" />
+  <input type="submit" name="upload" value="Upload">
+</form>
