Saves images on the file system

--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -4,7 +4,7 @@
   <input type="submit" value="Submit">
 </form>
 
-<form id="upload-photo-form" action="/posts/upload" method="post">
+<form id="upload-photo-form" action="/posts/upload" method="post" enctype="multipart/form-data">
   <input type="file" name="image" />
   <input type="submit" name="upload" value="Upload">
 </form>
