Picture name in the response url

--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -5,6 +5,8 @@
 </form>
 
 <form id="upload-photo-form" action="/posts/upload" method="post" enctype="multipart/form-data">
-  <input type="file" name="image" />
+  <input type="file" name="image" accept="image/*" /> 
   <input type="submit" name="upload" value="Upload">
 </form>
+
+{{!-- image/jpeg if only accepting jpegs --}}
