Uploads message to online database

--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -5,8 +5,11 @@
 </form>
 
 <form id="upload-photo-form" action="/posts/upload" method="post" enctype="multipart/form-data">
-  <input type="file" name="image" accept="image/*" /> 
-  <input type="submit" name="upload" value="Upload">
+  <input type="file" name="image" accept="image/*" > 
+  <input id="message-2" type="text" name="message" value="" > 
+  <input type="submit" name="upload" value="Upload" >
 </form>
+
+<img src="{{url}}" />
 
 {{!-- image/jpeg if only accepting jpegs --}}
